[gd_scene load_steps=2 format=3 uid="uid://c1pc4s8seasdx"]

[ext_resource type="Script" uid="uid://brbs7d2jqesdi" path="res://scenes/UI/action_menu.gd" id="1_qqoll"]

[node name="ActionPanel" type="Panel"]
unique_name_in_owner = true
offset_left = 32.0
offset_top = 556.0
offset_right = 232.0
offset_bottom = 596.0
script = ExtResource("1_qqoll")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 200.0
offset_bottom = 40.0
alignment = 1

[node name="AttackButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Attack"

[node name="DefendButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Defend"

[node name="SkillButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Skill
"
